--- a/index.html
+++ b/index.html
@@ -3,52 +3,61 @@
 <head>
     <meta charset="UTF-8">
 
-    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="stylesheet.css">
+    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
+          type="text/css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"/>
+
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <form action="method">
-        <label for="stuid">شماره دانشجویی</label>
-        <input type="text" name="stuid" id="stuid">
-        <br>
-        <label for="name">نام*</label>
-        <input type="text" name="name" id="name" >
-        <br>
-        <label for="family">نام خانوادگی</label>
-        <input type="text" name="family" id="family">
-        <br>
-        <label for="birthday">تاریخ تولد</label>
-        <input type="date" name="birthday" id="birthday">
-        <br>
-        <label for="age"> سن:</label>
-        <input type="number" name="age" id="age"  min="20" max="40">
-        <br>
-        <label for="email">ایمیل</label>
-        <input type="email" name="email" id="email">
-        <br>
-        <label for="password">پسورد</label>
-        <input type="password" name="password" id="password">
-        <br>
-        <label for="">جنسیت</label>
-        <label for="female">زن</label>
-        <input type="radio" id="gender" name="female" >
-        <label for="male">مرد</label>
-        <input type="radio" id="gender" name="male" >
-        <br>
-        <label for="">مهارت ها:</label>
-        <label for="wordpress">وردپرس</label>
-        <input type="checkbox" name="wordpress" id="skills">
-        <label for="PHP">PHP</label>
-        <input type="checkbox" name="PHP" id="skills">
-        <label for="SEO">SEO</label>
-        <input type="checkbox" name="SEO" id="skills">
-        <label for="python">python</label>
-        <input type="checkbox" name="python" id="skills">
-        <br>
-        <label for="picture">تصویر</label>
-        <input type="file" name="picture" id="picture">
-        <br> <input type="submit" value="ثبت نام" id="sumbit">
-    </form>
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">ثبت نام</h5>
+        <form action="" method="post">
+            <label class="form-label" for="stuid">شماره دانشجویی</label>
+            <input class="form-control" type="text" name="stuid" id="stuid">
+            <br>
+            <label class="form-label" for="name">نام*</label>
+            <input class="form-control" type="text" name="name" id="name">
+            <br>
+            <label class="form-label" for="family">نام خانوادگی</label>
+            <input class="form-control" type="text" name="family" id="family">
+            <br>
+            <label class="form-label" for="birthday">تاریخ تولد</label>
+            <input class="form-control" type="date" name="birthday" id="birthday">
+            <br>
+            <label class="form-label" for="age"> سن</label>
+            <input class="form-control" type="number" name="age" id="age" min="20" max="40">
+            <br>
+            <label class="form-label" for="email">ایمیل</label>
+            <input class="form-control" type="email" name="email" id="email">
+            <br>
+            <label class="form-label" for="password">پسورد</label>
+            <input class="form-control" type="password" name="password" id="password">
+            <br>
+            <label class="form-label">جنسیت</label>
+            <label class="form-label" for="female">زن</label>
+            <input class="form-check-input" type="radio" id="female" name="female">
+            <label class="form-label" for="male">مرد</label>
+            <input class="form-check-input" type="radio" id="male" name="male">
+            <br>
+            <label class="form-label">مهارت ها:</label>
+            <label class="form-label" for="wordpress">وردپرس</label>
+            <input class="form-check-input" type="checkbox" name="wordpress" id="wordpress">
+            <label class="form-label" for="PHP">PHP</label>
+            <input class="form-check-input" type="checkbox" name="PHP" id="PHP">
+            <label class="form-label" for="SEO">SEO</label>
+            <input class="form-check-input" type="checkbox" name="SEO" id="SEO">
+            <label class="form-label" for="python">python</label>
+            <input class="form-check-input" type="checkbox" name="python" id="python">
+            <br>
+            <label class="form-label" for="picture">تصویر</label>
+            <input class="form-control" type="file" name="picture" id="picture">
+            <br> <input class="btn btn-primary w-100" type="submit" value="ثبت نام" id="sumbit">
+        </form>
+    </div>
+</div>
 </body>
 </html>
